# md-business

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.ja.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.changeset/: config.json
.claude/: decisions.md  project-status.md  roadmap.md
.claude/issues/: 001-v0.2.0-schema-spec.md  002-v0.7.0-schema-test-spec.md
.claude/rules/: product-baseline.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  new-channel.md  new-schema.md
.github/workflows/: ci.yml  oss-guard.yml  release.yml
.husky/: commit-msg  pre-commit  pre-push
apps/chrome-extension/: README.md  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/: .gitignore  CHANGELOG.md  DESIGN.md  README.md  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: git.rs  lib.rs  main.rs  watch.rs  watch_logic.rs  workspace.rs
apps/google-workspace-addon/: .claspignore  .gitignore  README.md  appsscript.json  esbuild.config.mjs  package.json  tsconfig.json  vitest.config.ts
docs/: data-cell-conventions.md  google-addon-marketplace-listing-plaintext.md  google-addon-marketplace-listing.md  google-addon-submit-guide.md  index.html  oauth-verification-demo-video-script.md
docs/assets/: style.css
docs/download/: index.html
docs/fork-guide/: README.md
docs/license/: index.html
docs/manual/: index.html
docs/privacy/: index.html
docs/screenshots/: README.md
docs/spec/: invoice-v1.md  spec-v1.md  test-spec-tsv-v1.md  test-spec-v1.md
docs/test-fixtures/: addon-sync-demo.md
docs/test-spec/: sample.md
scripts/: scan-bundle.mjs
scripts/oss-guard/: README.md  allowlist.txt  check-msg.mjs  check-staged.mjs  check-tree.mjs  patterns.mjs  patterns.test.mjs  util.mjs
templates/api-spec/: standard-ja.md
templates/invoice/: inbound-eligible.md  standard-ja.md  standard.md  tax-exempt-ja.md
(+199 files in other folders)
