[package]
name = "md-business-desktop"
version = "0.2.0"
description = "md-business desktop app (Tauri 2 + SvelteKit)"
authors = ["meta-taro"]
license = "MIT"
repository = "https://github.com/meta-taro/md-business"
edition = "2021"
rust-version = "1.77.2"

# Tauri は main バイナリと、テスト/モバイルで共有する lib の両構成を取る。
[lib]
name = "md_business_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# フォルダ選択ダイアログ（Tauri 公式プラグイン・MIT/Apache-2.0）。open のみ利用。
tauri-plugin-dialog = "2"
# 外部 URL を既定ブラウザで開く（Tauri 公式プラグイン・MIT/Apache-2.0）。open-url のみ利用。
tauri-plugin-opener = "2"
# 更新適用後にアプリを再起動するためのプロセス制御プラグイン。
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 外部編集の即時検知に使うファイル監視。notify 6.x は MSRV 1.60 で本クレート(1.77.2)に
# 収まる。debouncer-full は短時間の連続イベントを束ね、リネームの From/To も解決する。
notify = "6.1"
notify-debouncer-full = "0.3"

# 自動アップデートはデスクトップ専用（モバイルは対象外）。GitHub Releases の
# 署名付き成果物を取得・検証・適用する。ターゲット cfg でデスクトップに限定する。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# リリースビルドはサイズ最適化（デスクトップ配布容量を抑える）。
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
